# ppb-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: ppb_mcp_implementation_prompt.md
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
deploy/: deploy.sh  nginx-ppb-mcp.conf  ppb-mcp.service  update.sh
docs/: llms.txt  mcp.json
src/ppb_mcp/: __init__.py  data.py  db.py  models.py  server.py
src/ppb_mcp/tools/: __init__.py  _filters.py  _qualitative.py  _vram.py  combined.py  compare_quantitative.py  compare_quants.py  context_rot.py  explain_result.py  headroom.py  list_configs.py  qualitative_query.py  qualitative_summary.py  query.py  rank.py  recommend.py  recommend_hardware.py  tool_accuracy.py
tests/: conftest.py  test_data.py  test_db.py  test_qualitative_tools.py  test_server.py  test_tools.py
