[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppb-mcp"
version = "0.1.0"
description = "Poor Paul's MCP Server — queryable GPU inference benchmarks for LLM clients"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Paul Lee", email = "paul@poorpaul.dev" }]
keywords = ["mcp", "llm", "gpu", "benchmark", "quantization", "local-llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "huggingface_hub>=0.20",
    "pandas>=2.2",
    "pydantic>=2.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
ppb-mcp = "ppb_mcp.server:main"

[project.urls]
Homepage = "https://poorpaul.dev"
Repository = "https://github.com/paulplee/ppb-mcp"
"Bug Tracker" = "https://github.com/paulplee/ppb-mcp/issues"
"Data Source" = "https://huggingface.co/datasets/paulplee/ppb-results"

[tool.hatch.build.targets.wheel]
packages = ["src/ppb_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the real HuggingFace dataset (set PPB_RUN_INTEGRATION=1 to enable)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

# Runtime environment variables:
# PPB_DB_PATH              Path to SQLite cache db (default: ./ppb_cache.db)
# HF_DATASET               HuggingFace dataset repo (default: paulplee/ppb-results)
# REFRESH_INTERVAL_HOURS   Hours between HF sync checks (default: 1)
# MCP_TRANSPORT            stdio | streamable-http (default: streamable-http)
# PORT                     HTTP port (default: 9933)
# LOG_LEVEL                Python logging level (default: INFO)
